--- a/src/app/club/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/club/layouts/admin-layout/admin-layout.component.html
@@ -34,7 +34,7 @@
         </mat-sidenav>
         <mat-sidenav-content>
           <div class="content mat-elevation-z8">
-            <router-outlet></router-outlet>
+            <app-fleet-contract-broker-detail></app-fleet-contract-broker-detail>
           </div>
         </mat-sidenav-content>
       </mat-sidenav-container> 
