--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -139,33 +139,33 @@
                   <div class="col-md-4 mb-4 pb-2">
                     <div class="form-outline">
                       <label class="form-label required" for="form3Examplev2">Marca</label>
-                      <select formControlName="xmarca" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xmarca').errors } " (change)="getModeloData()">
-                        <option *ngFor="let marca of marcaList" value="{{ marca.value }}">{{ marca.value }}</option>
+                      <select formControlName="cmarca" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmarca').errors } " (change)="getModeloData()">
+                        <option *ngFor="let marca of marcaList" value="{{ marca.id }}">{{ marca.value }}</option>
                       </select>
-                      <div *ngIf="submitted && search_form.get('xmarca').errors" class="invalid-feedback">
-                        <div *ngIf="search_form.get('xmarca').errors.required">Se requiere completar el campo</div>
+                      <div *ngIf="submitted && search_form.get('cmarca').errors" class="invalid-feedback">
+                        <div *ngIf="search_form.get('cmarca').errors.required">Se requiere completar el campo</div>
                       </div>
                     </div>
                   </div>
                   <div class="col-md-4 mb-4 pb-2">
                     <div class="form-outline">
                       <label class="form-label required" for="form3Examplev4">Modelo</label>
-                      <select formControlName="xmodelo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xmodelo').errors }" (change)="getVersionData()">
-                        <option *ngFor="let modelo of modeloList" value="{{ modelo.value }}">{{ modelo.value }}</option>
+                      <select formControlName="cmodelo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmodelo').errors }" (change)="getVersionData()">
+                        <option *ngFor="let modelo of modeloList" value="{{ modelo.id }}">{{ modelo.value }}</option>
                       </select>
-                      <div *ngIf="submitted && search_form.get('xmodelo').errors" class="invalid-feedback">
-                        <div *ngIf="search_form.get('xmodelo').errors.required">Se requiere completar el campo</div>
+                      <div *ngIf="submitted && search_form.get('cmodelo').errors" class="invalid-feedback">
+                        <div *ngIf="search_form.get('cmodelo').errors.required">Se requiere completar el campo</div>
                       </div>
                     </div>
                   </div>
                   <div class="col-md-4 mb-4 pb-2">
                     <div class="form-outline form-white">
                       <label class="form-label " for="form3Examplea7">Versión</label>
-                      <select formControlName="xversion" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xversion').errors }">
-                        <option *ngFor="let version of versionList" value="{{ version.value }}">{{ version.value }}</option>
+                      <select formControlName="cversion" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cversion').errors }">
+                        <option *ngFor="let version of versionList" value="{{ version.id }}">{{ version.value }}</option>
                       </select>
-                      <div *ngIf="submitted && search_form.get('xversion').errors" class="invalid-feedback">
-                        <div *ngIf="search_form.get('xversion').errors.required">Se requiere completar el campo</div>
+                      <div *ngIf="submitted && search_form.get('cversion').errors" class="invalid-feedback">
+                        <div *ngIf="search_form.get('cversion').errors.required">Se requiere completar el campo</div>
                       </div>
                     </div>
                   </div>
