--- a/src/app/pop-up/bill-loading-service-order/bill-loading-service-order.component.html
+++ b/src/app/pop-up/bill-loading-service-order/bill-loading-service-order.component.html
@@ -14,17 +14,38 @@
                         <div class="col-6">
                             Lista de Ordenes de Servicios
                         </div>
-                        <div class="col-6">
-                            <button [disabled]="loading" class="btn company-detail-button float-right" type="button" (click)="onSubmit(popup_form.value)">
+                        <!-- <div class="col-6">
+                            <button [disabled]="loading" class="btn company-detail-button float-right" type="button" (click)="searchServiceOrder()">
                                 <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                                 Buscar
                             </button>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="container">
+                        <ag-grid-angular style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="serviceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="serviceOrderRowClicked($event)">
+                            <ag-grid-column headerName="Codigo" field="corden" [width]="120" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Cliente" field="xcliente" [width]="200" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Proveedor" field="xnombre" [width]="200" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Servicio" field="xservicio" [width]="200" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Monto Grua" field="mmontototal" [width]="150" [sortable]="true"></ag-grid-column>
+                            <ag-grid-column headerName="Monto Cotizacion" field="mtotal" [width]="150" [sortable]="true"></ag-grid-column>
+                        </ag-grid-angular>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header company-card-header">
+                    <div class="row">
+                        <div class="col-6">
+                            Ordenes de Servicios
                         </div>
                     </div>
                 </div>
                 <div class="card-body">
                     <div class="container">
-                        <ag-grid-angular style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="serviceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="rowClicked($event)">
+                        <ag-grid-angular style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="acceptedServiceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single">
                             <ag-grid-column headerName="Codigo" field="corden" [width]="120" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Cliente" field="xcliente" [width]="200" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Proveedor" field="xnombre" [width]="200" [sortable]="true"></ag-grid-column>
