--- a/src/app/club/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/club/layouts/admin-layout/admin-layout.component.html
@@ -10,11 +10,11 @@
       
       <mat-sidenav-container>
         <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
-          <img class="logo" src="./../../../../assets/imagenes/arys/logo.png"/>
+          <img class="logo logocompany" >
       
           <mat-divider></mat-divider>
       
-          <button mat-button class="menu-button" routerLink="/dashboard">
+           <!-- <button mat-button class="menu-button" routerLink="/dashboard">
             <mat-icon>home</mat-icon>
             <span>Inicio</span>
           </button>
@@ -25,7 +25,7 @@
           <button mat-button class="menu-button" routerLink="/notifications">
             <mat-icon>notification_important</mat-icon>
             <span>Notificaciones</span>
-          </button>
+          </button>  -->
           <button *ngIf="auth" mat-button class="menu-button"  (click)="logOut()" routerLink="/inicio">
             <mat-icon>exit_to_app</mat-icon>
             <span>Salir</span>
@@ -42,7 +42,6 @@
 
 
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
