--- a/src/app/club/layouts/admin-layout/styles.scss
+++ b/src/app/club/layouts/admin-layout/styles.scss
@@ -33,6 +33,7 @@ mat-sidenav-container {
   align-items: center;
   justify-content: flex-start;
   font-size: 1rem;
+  background: unset;
 
   mat-icon {
     margin-right: 8px;
