--- a/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
+++ b/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
@@ -29,7 +29,7 @@
                           <option value="P">P</option>
                           <option value="E">E</option>
                           <option value="J">J</option>
-                          <option value="O">O</option>
+                          <option value="C">C</option>
                           <option value="G">G</option>
                         </select>                      
                         <div *ngIf="submitted && search_form.get('icedula').errors" class="invalid-feedback">
@@ -144,33 +144,51 @@
                     <div class="col-md-4 mb-4 pb-2">
                       <div class="form-outline">
                         <label class="form-label required" for="form3Examplev2">Marca</label>
-                        <select formControlName="xmarca" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xmarca').errors } " (change)="getModeloData()">
-                          <option *ngFor="let marca of marcaList" value="{{ marca.value }}">{{ marca.value }}</option>
+                        <select formControlName="cmarca" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmarca').errors } " (change)="getModeloData()">
+                          <option *ngFor="let marca of marcaList" value="{{ marca.id }}">{{ marca.value }}</option>
                         </select>
-                        <div *ngIf="submitted && search_form.get('xmarca').errors" class="invalid-feedback">
-                          <div *ngIf="search_form.get('xmarca').errors.required">Se requiere completar el campo</div>
+                        <div *ngIf="submitted && search_form.get('cmarca').errors" class="invalid-feedback">
+                          <div *ngIf="search_form.get('cmarca').errors.required">Se requiere completar el campo</div>
                         </div>
                       </div>
                     </div>
                     <div class="col-md-4 mb-4 pb-2">
                       <div class="form-outline">
                         <label class="form-label required" for="form3Examplev4">Modelo</label>
-                        <select formControlName="xmodelo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xmodelo').errors }" (change)="getVersionData()">
-                          <option *ngFor="let modelo of modeloList" value="{{ modelo.value }}">{{ modelo.value }}</option>
+                        <select formControlName="cmodelo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmodelo').errors }" (change)="getVersionData()">
+                          <option *ngFor="let modelo of modeloList" value="{{ modelo.id }}">{{ modelo.value }}</option>
                         </select>
-                        <div *ngIf="submitted && search_form.get('xmodelo').errors" class="invalid-feedback">
-                          <div *ngIf="search_form.get('xmodelo').errors.required">Se requiere completar el campo</div>
+                        <div *ngIf="submitted && search_form.get('cmodelo').errors" class="invalid-feedback">
+                          <div *ngIf="search_form.get('cmodelo').errors.required">Se requiere completar el campo</div>
                         </div>
                       </div>
                     </div>
                     <div class="col-md-4 mb-4 pb-2">
                       <div class="form-outline form-white">
                         <label class="form-label " for="form3Examplea7">Versión</label>
-                        <select formControlName="xversion" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xversion').errors }">
-                          <option *ngFor="let version of versionList" value="{{ version.value }}">{{ version.value }}</option>
+                        <select formControlName="cversion" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cversion').errors }"  (change)="search()">
+                          <option *ngFor="let version of versionList" value="{{ version.id }}">{{ version.value }}</option>
                         </select>
-                        <div *ngIf="submitted && search_form.get('xversion').errors" class="invalid-feedback">
-                          <div *ngIf="search_form.get('xversion').errors.required">Se requiere completar el campo</div>
+                        <div *ngIf="submitted && search_form.get('cversion').errors" class="invalid-feedback">
+                          <div *ngIf="search_form.get('cversion').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-4 mb-4 pb-2">
+                      <div class="form-outline">
+                        <label class="form-label required">Año del automovil</label>
+                        <input type="number" formControlName="cano" class="form-control form-control-lg"  [ngClass]="{ 'is-invalid' : submitted && search_form.get('cano').errors }" (change)="years()" />
+                        <div *ngIf="submitted && search_form.get('cano').errors" class="invalid-feedback">
+                          <div *ngIf="search_form.get('cano').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-4 mb-4 pb-2">
+                      <div class="form-outline">
+                        <label class="form-label required">Número de Pasajeros</label>
+                        <input type="text" formControlName="ncapacidad_p" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('ncapacidad_p').errors }" />
+                        <div *ngIf="submitted && search_form.get('ncapacidad_p').errors" class="invalid-feedback">
+                          <div *ngIf="search_form.get('ncapacidad_p').errors.required">Se requiere completar el campo</div>
                         </div>
                       </div>
                     </div>
@@ -185,15 +203,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-4 mb-4 pb-2">
-                      <div class="form-outline">
-                        <label class="form-label required">Número de Pasajeros</label>
-                        <input type="text" formControlName="ncapacidad_p" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('ncapacidad_p').errors }" />
-                        <div *ngIf="submitted && search_form.get('ncapacidad_p').errors" class="invalid-feedback">
-                          <div *ngIf="search_form.get('ncapacidad_p').errors.required">Se requiere completar el campo</div>
-                        </div>
-                      </div>
-                    </div>
+
                     <div class="col-md-4 mb-4 pb-2">
                       <div class="form-outline">
                         <label class="form-label required" for="form3Examplev2">Serial de Carroceria</label>
@@ -233,6 +243,9 @@
                           <option value="Rustico">Rustico</option>
                           <option value="Pick-UP">Pick-UP</option>
                           <option value="Carga">Carga</option>
+                          <option value="Carga 5-8">Carga 5-8 Toneladas</option>
+                          <option value="Carga 8-12">Carga 8-12 Toneladas</option>
+                          <option value="Carga M-12">Carga M-12 Toneladas</option>
                           <option value="Motos">Motos</option>
                         </select>
                         <div *ngIf="submitted && search_form.get('xtipo').errors" class="invalid-feedback">
@@ -240,15 +253,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-4 mb-4 pb-2">
-                      <div class="form-outline">
-                        <label class="form-label required">Año del automovil</label>
-                        <input type="number" formControlName="cano" class="form-control form-control-lg"  [ngClass]="{ 'is-invalid' : submitted && search_form.get('cano').errors }" (change)="years()"/>
-                        <div *ngIf="submitted && search_form.get('cano').errors" class="invalid-feedback">
-                          <div *ngIf="search_form.get('cano').errors.required">Se requiere completar el campo</div>
-                        </div>
-                      </div>
-                    </div>
+
                     <div><button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="generateTarifa()" *ngIf="cobertura">Calcular Tarifas</button></div>
 
                   </div>
