--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -26,7 +26,7 @@
                         <option value="P">P</option>
                         <option value="E">E</option>
                         <option value="J">J</option>
-                        <option value="O">O</option>
+                        <option value="C">C</option>
                         <option value="G">G</option>
                       </select>                      
                       <div *ngIf="submitted && search_form.get('icedula').errors" class="invalid-feedback">
@@ -161,11 +161,29 @@
                   <div class="col-md-4 mb-4 pb-2">
                     <div class="form-outline form-white">
                       <label class="form-label " for="form3Examplea7">Versión</label>
-                      <select formControlName="cversion" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cversion').errors }">
+                      <select formControlName="cversion" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cversion').errors }"  (change)="search()">
                         <option *ngFor="let version of versionList" value="{{ version.id }}">{{ version.value }}</option>
                       </select>
                       <div *ngIf="submitted && search_form.get('cversion').errors" class="invalid-feedback">
                         <div *ngIf="search_form.get('cversion').errors.required">Se requiere completar el campo</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4 mb-4 pb-2">
+                    <div class="form-outline">
+                      <label class="form-label required">Año del automovil</label>
+                      <input type="number" formControlName="cano" class="form-control form-control-lg"  [ngClass]="{ 'is-invalid' : submitted && search_form.get('cano').errors }" (change)="years()" />
+                      <div *ngIf="submitted && search_form.get('cano').errors" class="invalid-feedback">
+                        <div *ngIf="search_form.get('cano').errors.required">Se requiere completar el campo</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4 mb-4 pb-2">
+                    <div class="form-outline">
+                      <label class="form-label required">Número de Pasajeros</label>
+                      <input type="text" formControlName="ncapacidad_p" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('ncapacidad_p').errors }" />
+                      <div *ngIf="submitted && search_form.get('ncapacidad_p').errors" class="invalid-feedback">
+                        <div *ngIf="search_form.get('ncapacidad_p').errors.required">Se requiere completar el campo</div>
                       </div>
                     </div>
                   </div>
@@ -180,15 +198,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-4 mb-4 pb-2">
-                    <div class="form-outline">
-                      <label class="form-label required">Número de Pasajeros</label>
-                      <input type="text" formControlName="ncapacidad_p" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('ncapacidad_p').errors }" />
-                      <div *ngIf="submitted && search_form.get('ncapacidad_p').errors" class="invalid-feedback">
-                        <div *ngIf="search_form.get('ncapacidad_p').errors.required">Se requiere completar el campo</div>
-                      </div>
-                    </div>
-                  </div>
+
                   <div class="col-md-4 mb-4 pb-2">
                     <div class="form-outline">
                       <label class="form-label required" for="form3Examplev2">Serial de Carroceria</label>
@@ -215,7 +225,7 @@
                         <option value="AMPLIA">AMPLIA</option>
                         <option value="PERDIDA TOTAL">PERDIDA TOTAL</option>
                       </select>                         
-                       <div *ngIf="submitted && search_form.get('xcobertura').errors"  class="invalid-feedback">
+                      <div *ngIf="submitted && search_form.get('xcobertura').errors"  class="invalid-feedback">
                         <div *ngIf="search_form.get('xcobertura').errors.required">Se requiere completar el campo</div>
                       </div>
                     </div>
@@ -228,22 +238,13 @@
                         <option value="Rustico">Rustico</option>
                         <option value="Pick-UP">Pick-UP</option>
                         <option value="Carga">Carga</option>
-                        <option value="Carga 5-8">Carga 1</option>
-                        <option value="Carga 8-12">Carga 2</option>
-                        <option value="Carga M-12">Remolque</option>
+                        <option value="Carga 5-8">Carga 5-8 Toneladas</option>
+                        <option value="Carga 8-12">Carga 8-12 Toneladas</option>
+                        <option value="Carga M-12">Carga M-12 Toneladas</option>
                         <option value="Motos">Motos</option>
                       </select>
                       <div *ngIf="submitted && search_form.get('xtipo').errors" class="invalid-feedback">
                         <div *ngIf="search_form.get('xtipo').errors.required">Se requiere completar el campo</div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-md-4 mb-4 pb-2">
-                    <div class="form-outline">
-                      <label class="form-label required">Año del automovil</label>
-                      <input type="number" formControlName="cano" class="form-control form-control-lg"  [ngClass]="{ 'is-invalid' : submitted && search_form.get('cano').errors }" (change)="years()"/>
-                      <div *ngIf="submitted && search_form.get('cano').errors" class="invalid-feedback">
-                        <div *ngIf="search_form.get('cano').errors.required">Se requiere completar el campo</div>
                       </div>
                     </div>
                   </div>
