--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -161,8 +161,8 @@
                   <div class="col-md-4 mb-4 pb-2">
                     <div class="form-outline form-white">
                       <label class="form-label " for="form3Examplea7">Versión</label>
-                      <select formControlName="cversion" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cversion').errors }"  (change)="search()">
-                        <option *ngFor="let version of versionList" value="{{ version.id }}">{{ version.value }}</option>
+                      <select formControlName="cversion" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cversion').errors }"  (change)="searchVersion()">
+                        <option *ngFor="let version of versionList" value="{{ version.control }}">{{ version.value }}</option>
                       </select>
                       <div *ngIf="submitted && search_form.get('cversion').errors" class="invalid-feedback">
                         <div *ngIf="search_form.get('cversion').errors.required">Se requiere completar el campo</div>
