--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -20,7 +20,7 @@
                 <div class="row">
                   <div class="col-md-2 mb-4 pb-2">
                     <div class="form-outline">
-                      <label class="form-label required" for="form3Examplev2"></label>
+                      <label class="form-label required" for="form3Examplev2">Tipo Doc. Ide</label>
                       <select formControlName="icedula" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('icedula').errors } " >
                         <option value="V">V</option>
                         <option value="P">P</option>
