--- a/src/app/club/layouts/admin-layout/admin-layout.component.css
+++ b/src/app/club/layouts/admin-layout/admin-layout.component.css
@@ -1,5 +1,5 @@
 mat-toolbar {
-  background: #004a9f;
+  background: #002b5c;
 }
 
 mat-sidenav {
@@ -33,12 +33,20 @@ mat-sidenav-container {
   align-items: center;
   justify-content: flex-start;
   font-size: 1rem;
-  background: unset; }
+  margin-top: 20px;
+  background-color: transparent;
 
+} 
   mat-icon {
     margin-right: 8px;
- 
-}
+    background-color: transparent;
+    color: white;
+  }
+  .mat-icon-button{
+    background-color: transparent;
+    color: white ;
+
+  }
 
 .avatar {
   margin-top: 16px;
