--- a/src/app/pop-up/bill-loading-service-order/bill-loading-service-order.component.html
+++ b/src/app/pop-up/bill-loading-service-order/bill-loading-service-order.component.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="card-body">
                     <div class="container">
-                        <ag-grid-angular style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="serviceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="serviceOrderRowClicked($event)">
+                        <ag-grid-angular style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="serviceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" (rowClicked)="serviceOrderRowClicked($event)" [enableCellChangeFlash]="true" (gridReady)="onServiceOrderGridReady($event)">
                             <ag-grid-column headerName="Codigo" field="corden" [width]="120" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Cliente" field="xcliente" [width]="200" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Proveedor" field="xnombre" [width]="200" [sortable]="true"></ag-grid-column>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="card-body">
                     <div class="container">
-                        <ag-grid-angular style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="acceptedServiceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single">
+                        <ag-grid-angular style="width: 100%; height: 400px;" class="ag-theme-alpine" [rowData]="acceptedServiceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single" [enableCellChangeFlash]="true" (gridReady)="onAcceptedServiceOrderGridReady($event)">
                             <ag-grid-column headerName="Codigo" field="corden" [width]="120" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Cliente" field="xcliente" [width]="200" [sortable]="true"></ag-grid-column>
                             <ag-grid-column headerName="Proveedor" field="xnombre" [width]="200" [sortable]="true"></ag-grid-column>
