--- a/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
+++ b/src/app/subscription/fleet-contract-individual/fleet-contract-individual-detail/fleet-contract-individual-detail.component.html
@@ -409,11 +409,15 @@
             <div class="cards">
               <div class="card-header company-card-header"><h5 class="card-title">Detalles del recibo</h5></div>
               <div class="row" style="padding: 10px;">
-                <div class="col-md-4 mb-4 pb-2" *ngIf="!plan">
+                <div class="col-md-4 mb-4 pb-2" *ngIf="!plan"><!--- -->
                   <div class="form-outline">
                     <label class="form-label required">Frecuencia de Pago</label>
                     <select formControlName="cmetodologiapago" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmetodologiapago').errors }" (change)="frecuencias()" >
-                      <option *ngFor="let metodologia of metodologiaList" value="{{ metodologia.id}}">{{ metodologia.value }}</option>
+                      <option value="1">MENSUAL</option>
+                      <option value="2">TRIMESTRAL</option>
+                      <option value="3">CUATRIMESTRAL</option>
+                      <option value="4">SEMESTRAL</option>
+                      <option value="5">ANUAL</option>
                     </select>
                     <div *ngIf="submitted && search_form.get('cmetodologiapago').errors" class="invalid-feedback">
                       <div *ngIf="search_form.get('cmetodologiapago').errors.required">Se requiere completar el campo</div>
@@ -423,22 +427,22 @@
                 <div class="col-md-3 mb-4 pb-2" *ngIf="plan">
                   <div class="form-outline">
                     <label class="form-label " for="form3Examplev5">Vigencia</label>
-                    <select formControlName="ivigencia" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('ivigencia').errors }" >
-                      <option value="1">Anual</option>
-                      <option value="2">3 Días</option>
-                      <option value="3">5 Días</option>
-                      <option value="4">7 Días</option>
-                      <option value="5">15 Días</option>
-                      <option value="6">30 Días</option>
+                    <select formControlName="cmetodologiapago" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('cmetodologiapago').errors }" >
+                      <option value="5">Anual</option>
+                      <option value="6">3 Días</option>
+                      <option value="7">5 Días</option>
+                      <option value="8">7 Días</option>
+                      <option value="9">15 Días</option>
+                      <option value="10">30 Días</option>
                     </select>
-                    <div *ngIf="submitted && search_form.get('ivigencia').errors" class="invalid-feedback">
-                      <div *ngIf="search_form.get('ivigencia').errors.required">Se requiere completar el campo</div>
+                    <div *ngIf="submitted && search_form.get('cmetodologiapago').errors" class="invalid-feedback">
+                      <div *ngIf="search_form.get('cmetodologiapago').errors.required">Se requiere completar el campo</div>
                     </div>
                   </div>
                 </div>
                  <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
                   <div class="form-outline">
-                    <label class="form-label required" for="form3Examplev5">Fecha de emisión</label>
+                    <label class="form-label required" for="form3Examplev5">Fecha de inicio</label>
                     <input type="date" formControlName="femision" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('femision').errors }" change="femisio()" />
                     <div *ngIf="submitted && search_form.get('femision').errors" class="invalid-feedback">
                       <div *ngIf="search_form.get('femision').errors.required">Se requiere completar el campo</div>
